--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-
+    <button id="play-button" onclick="startStop()">Play/Pause</button>
     <script src="app.js"></script>
 </body>
 </html>
