--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     
     <button id="play-button" onclick="startStop()">Play/Pause</button>
+    <button id="play-button2" onclick="startStop2()">PlayMyChords</button>
     <script src="app.js"></script>
 </body>
 </html>
